# gpr300-sp24-Dawson-Jackson

./: CMakeLists.txt
assignments/assignment0/: main.cpp
assignments/assignment0/assets/: lit.vert
assignments/assignment1/: main.cpp
assignments/assignment1/assets/: gamma.frag  postprocess.frag  postprocess.vert  scene.frag  scene.vert
assignments/assignment2/: CMakeLists.txt  main.cpp
assignments/assignment2/assets/: decal.frag  decal.vert  geometry.frag  geometry.vert  lighting.frag  lighting.vert  shadow.frag
assignments/assignment4/: CMakeLists.txt  main.cpp
assignments/assignment5/: CMakeLists.txt  main.cpp
assignments/assignment5/assets/: light.frag  light.vert  lit.frag  lit.vert  shader.vert
assignments/assignment6/: CMakeLists.txt  main.cpp
assignments/assignment6/assets/: lit.frag  shadow.frag  shadow.vert
assignments/assignment7/: CMakeLists.txt  main.cpp
assignments/assignment7/assets/: decal.frag  decal.vert  decal_preview.frag  decal_preview.vert  geometry.frag  geometry.vert  lighting.frag  lighting.vert
core/dawslib/: animation.h
